include/transcribe.h


typedef enum {
    TRANSCRIBE_OK                         = 0,
    TRANSCRIBE_ERR_INVALID_ARG            = 1,
    TRANSCRIBE_ERR_NOT_IMPLEMENTED        = 2,
    TRANSCRIBE_ERR_FILE_NOT_FOUND         = 3,
    TRANSCRIBE_ERR_GGUF                   = 4,
    TRANSCRIBE_ERR_UNSUPPORTED_ARCH       = 5,
    TRANSCRIBE_ERR_UNSUPPORTED_VARIANT    = 6,
    TRANSCRIBE_ERR_OOM                    = 7,
    TRANSCRIBE_ERR_BACKEND                = 8,
    TRANSCRIBE_ERR_SAMPLE_RATE            = 9,
    TRANSCRIBE_ERR_UNSUPPORTED_LANGUAGE   = 10,
    TRANSCRIBE_ERR_UNSUPPORTED_TASK       = 11,
    TRANSCRIBE_ERR_UNSUPPORTED_TIMESTAMPS = 12,
    TRANSCRIBE_ERR_ABORTED                = 13,
    TRANSCRIBE_ERR_BAD_STRUCT_SIZE        = 14,
    TRANSCRIBE_ERR_UNSUPPORTED_PNC        = 15,
    TRANSCRIBE_ERR_UNSUPPORTED_ITN        = 16,
    TRANSCRIBE_ERR_INPUT_TOO_LONG         = 17,
    TRANSCRIBE_ERR_OUTPUT_TRUNCATED       = 18,
} transcribe_status;
typedef enum {
    TRANSCRIBE_TASK_TRANSCRIBE = 0,
    TRANSCRIBE_TASK_TRANSLATE  = 1,
} transcribe_task;
typedef enum {
    TRANSCRIBE_TIMESTAMPS_NONE    = 0,
    TRANSCRIBE_TIMESTAMPS_AUTO    = 1,
    TRANSCRIBE_TIMESTAMPS_SEGMENT = 2,
    TRANSCRIBE_TIMESTAMPS_WORD    = 3,
    TRANSCRIBE_TIMESTAMPS_TOKEN   = 4,
} transcribe_timestamp_kind;
typedef enum {
    TRANSCRIBE_KV_TYPE_AUTO = 0,
    TRANSCRIBE_KV_TYPE_F32  = 1,
    TRANSCRIBE_KV_TYPE_F16  = 2,
} transcribe_kv_type;
enum transcribe_pnc_mode {
    TRANSCRIBE_PNC_MODE_DEFAULT = 0,
    TRANSCRIBE_PNC_MODE_OFF     = 1,
    TRANSCRIBE_PNC_MODE_ON      = 2,
};
enum transcribe_itn_mode {
    TRANSCRIBE_ITN_MODE_DEFAULT = 0,
    TRANSCRIBE_ITN_MODE_OFF     = 1,
    TRANSCRIBE_ITN_MODE_ON      = 2,
};
struct transcribe_model;
struct transcribe_session;
struct transcribe_ext {
    uint64_t size;
    uint32_t kind;
};
typedef enum {
    TRANSCRIBE_BACKEND_AUTO      = 0,
    TRANSCRIBE_BACKEND_CPU       = 1,
    TRANSCRIBE_BACKEND_METAL     = 2,
    TRANSCRIBE_BACKEND_VULKAN    = 3,
    TRANSCRIBE_BACKEND_CPU_ACCEL = 4,
    TRANSCRIBE_BACKEND_CUDA      = 5,
} transcribe_backend_request;
typedef enum {
    TRANSCRIBE_DEVICE_TYPE_CPU   = 0, 
    TRANSCRIBE_DEVICE_TYPE_GPU   = 1, 
    TRANSCRIBE_DEVICE_TYPE_IGPU  = 2, 
    TRANSCRIBE_DEVICE_TYPE_ACCEL = 3, 
} transcribe_device_type;
struct transcribe_backend_device {
    uint64_t               struct_size;  
    const char *           name;         
    const char *           description;  
    const char *           kind;         
    const char *           device_id;    
    uint64_t               memory_total; 
    uint64_t               memory_free;  
    transcribe_device_type device_type;  
};
TRANSCRIBE_API void transcribe_backend_device_init(struct transcribe_backend_device * p);
TRANSCRIBE_API transcribe_status transcribe_get_backend_device(int index, struct transcribe_backend_device * out);
TRANSCRIBE_API bool transcribe_backend_available(transcribe_backend_request kind);
TRANSCRIBE_API transcribe_status transcribe_model_get_device(const struct transcribe_model *    model,
                                                             struct transcribe_backend_device * out);
struct transcribe_model_load_params {
    uint64_t                   struct_size;
    transcribe_backend_request backend;
    int                        gpu_device;
};
TRANSCRIBE_API void transcribe_model_load_params_init(struct transcribe_model_load_params * params);
struct transcribe_session_params {
    uint64_t           struct_size;
    int                n_threads;
    transcribe_kv_type kv_type;
    int32_t            n_ctx;
};
TRANSCRIBE_API void transcribe_session_params_init(struct transcribe_session_params * params);
struct transcribe_run_params {
    uint64_t struct_size;
    transcribe_task               task;
    transcribe_timestamp_kind     timestamps;
    enum transcribe_pnc_mode      pnc;
    enum transcribe_itn_mode      itn;
    const char *                  language;
    const char *                  target_language;
    bool                          keep_special_tags;
    const struct transcribe_ext * family;
    int32_t spec_k_drafts;
    const char * context;
};
TRANSCRIBE_API void transcribe_run_params_init(struct transcribe_run_params * params);
struct transcribe_capabilities {
    uint64_t struct_size;
    int32_t                   native_sample_rate;
    int                       n_languages;
    const char * const *      languages;
    transcribe_timestamp_kind max_timestamp_kind;
    bool supports_language_detect;
    bool supports_translate;
    bool supports_streaming;
    bool supports_spec_decode;
    int64_t max_audio_ms;
    int                  n_translate_target_languages;
    const char * const * translate_target_languages;
};
TRANSCRIBE_API void transcribe_capabilities_init(struct transcribe_capabilities * out);
TRANSCRIBE_API transcribe_status transcribe_model_get_capabilities(const struct transcribe_model *  model,
                                                                   struct transcribe_capabilities * out_caps);
typedef enum {
    TRANSCRIBE_FEATURE_INITIAL_PROMPT       = 0,
    TRANSCRIBE_FEATURE_TEMPERATURE_FALLBACK = 1,
    TRANSCRIBE_FEATURE_LONG_FORM            = 2,
    TRANSCRIBE_FEATURE_CANCELLATION         = 3,
    TRANSCRIBE_FEATURE_PNC                  = 4,
    TRANSCRIBE_FEATURE_ITN                  = 5,
} transcribe_feature;
TRANSCRIBE_API bool transcribe_model_supports(const struct transcribe_model * model, transcribe_feature feature);
TRANSCRIBE_API const char * transcribe_model_arch_string(const struct transcribe_model * model);
TRANSCRIBE_API const char * transcribe_model_variant_string(const struct transcribe_model * model);
TRANSCRIBE_API const char * transcribe_model_backend(const struct transcribe_model * model);
TRANSCRIBE_API const char * transcribe_model_meta_val_str(const struct transcribe_model * model, const char * key);
TRANSCRIBE_API transcribe_status transcribe_model_load_file(const char *                                path,
                                                            const struct transcribe_model_load_params * params,
                                                            struct transcribe_model **                  out_model);
TRANSCRIBE_API void transcribe_model_free(struct transcribe_model * model);
TRANSCRIBE_API transcribe_status transcribe_session_init(struct transcribe_model *                model,
                                                         const struct transcribe_session_params * params,
                                                         struct transcribe_session **             out_session);
TRANSCRIBE_API void transcribe_session_free(struct transcribe_session * session);
TRANSCRIBE_API transcribe_status transcribe_open(const char *                                path,
                                                 const struct transcribe_model_load_params * load_params,
                                                 const struct transcribe_session_params *    session_params,
                                                 struct transcribe_session **                out_session);