bindings/rust/sys/src/transcribe_sys.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_backend_device"]
        [::std::mem::size_of::<transcribe_backend_device>() - 64usize];
    ["Alignment of transcribe_backend_device"]
        [::std::mem::align_of::<transcribe_backend_device>() - 8usize];
    ["Offset of field: transcribe_backend_device::struct_size"]
        [::std::mem::offset_of!(transcribe_backend_device, struct_size) - 0usize];
    ["Offset of field: transcribe_backend_device::name"]
        [::std::mem::offset_of!(transcribe_backend_device, name) - 8usize];
    ["Offset of field: transcribe_backend_device::description"]
        [::std::mem::offset_of!(transcribe_backend_device, description) - 16usize];
    ["Offset of field: transcribe_backend_device::kind"]
        [::std::mem::offset_of!(transcribe_backend_device, kind) - 24usize];
    ["Offset of field: transcribe_backend_device::device_id"]
        [::std::mem::offset_of!(transcribe_backend_device, device_id) - 32usize];
    ["Offset of field: transcribe_backend_device::memory_total"]
        [::std::mem::offset_of!(transcribe_backend_device, memory_total) - 40usize];
    ["Offset of field: transcribe_backend_device::memory_free"]
        [::std::mem::offset_of!(transcribe_backend_device, memory_free) - 48usize];
    ["Offset of field: transcribe_backend_device::device_type"]
        [::std::mem::offset_of!(transcribe_backend_device, device_type) - 56usize];
};
unsafe extern "C" {
    pub fn transcribe_backend_device_init(p: *mut transcribe_backend_device);
}
unsafe extern "C" {
    pub fn transcribe_get_backend_device(
        index: ::std::os::raw::c_int,
        out: *mut transcribe_backend_device,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_backend_available(kind: transcribe_backend_request) -> bool;
}
unsafe extern "C" {
    pub fn transcribe_model_get_device(
        model: *const transcribe_model,
        out: *mut transcribe_backend_device,
    ) -> transcribe_status;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_model_load_params {
    pub struct_size: u64,
    pub backend: transcribe_backend_request,
    pub gpu_device: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_model_load_params"]
        [::std::mem::size_of::<transcribe_model_load_params>() - 16usize];
    ["Alignment of transcribe_model_load_params"]
        [::std::mem::align_of::<transcribe_model_load_params>() - 8usize];
    ["Offset of field: transcribe_model_load_params::struct_size"]
        [::std::mem::offset_of!(transcribe_model_load_params, struct_size) - 0usize];
    ["Offset of field: transcribe_model_load_params::backend"]
        [::std::mem::offset_of!(transcribe_model_load_params, backend) - 8usize];
    ["Offset of field: transcribe_model_load_params::gpu_device"]
        [::std::mem::offset_of!(transcribe_model_load_params, gpu_device) - 12usize];
};
unsafe extern "C" {
    pub fn transcribe_model_load_params_init(params: *mut transcribe_model_load_params);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_session_params {
    pub struct_size: u64,
    pub n_threads: ::std::os::raw::c_int,
    pub kv_type: transcribe_kv_type,
    pub n_ctx: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_session_params"]
        [::std::mem::size_of::<transcribe_session_params>() - 24usize];
    ["Alignment of transcribe_session_params"]
        [::std::mem::align_of::<transcribe_session_params>() - 8usize];
    ["Offset of field: transcribe_session_params::struct_size"]
        [::std::mem::offset_of!(transcribe_session_params, struct_size) - 0usize];
    ["Offset of field: transcribe_session_params::n_threads"]
        [::std::mem::offset_of!(transcribe_session_params, n_threads) - 8usize];
    ["Offset of field: transcribe_session_params::kv_type"]
        [::std::mem::offset_of!(transcribe_session_params, kv_type) - 12usize];
    ["Offset of field: transcribe_session_params::n_ctx"]
        [::std::mem::offset_of!(transcribe_session_params, n_ctx) - 16usize];
};
unsafe extern "C" {
    pub fn transcribe_session_params_init(params: *mut transcribe_session_params);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_run_params {
    pub struct_size: u64,
    pub task: transcribe_task,
    pub timestamps: transcribe_timestamp_kind,
    pub pnc: transcribe_pnc_mode,
    pub itn: transcribe_itn_mode,
    pub language: *const ::std::os::raw::c_char,
    pub target_language: *const ::std::os::raw::c_char,
    pub keep_special_tags: bool,
    pub family: *const transcribe_ext,
    pub spec_k_drafts: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_run_params"][::std::mem::size_of::<transcribe_run_params>() - 64usize];
    ["Alignment of transcribe_run_params"]
        [::std::mem::align_of::<transcribe_run_params>() - 8usize];
    ["Offset of field: transcribe_run_params::struct_size"]
        [::std::mem::offset_of!(transcribe_run_params, struct_size) - 0usize];
    ["Offset of field: transcribe_run_params::task"]
        [::std::mem::offset_of!(transcribe_run_params, task) - 8usize];
    ["Offset of field: transcribe_run_params::timestamps"]
        [::std::mem::offset_of!(transcribe_run_params, timestamps) - 12usize];
    ["Offset of field: transcribe_run_params::pnc"]
        [::std::mem::offset_of!(transcribe_run_params, pnc) - 16usize];
    ["Offset of field: transcribe_run_params::itn"]
        [::std::mem::offset_of!(transcribe_run_params, itn) - 20usize];
    ["Offset of field: transcribe_run_params::language"]
        [::std::mem::offset_of!(transcribe_run_params, language) - 24usize];
    ["Offset of field: transcribe_run_params::target_language"]
        [::std::mem::offset_of!(transcribe_run_params, target_language) - 32usize];
    ["Offset of field: transcribe_run_params::keep_special_tags"]
        [::std::mem::offset_of!(transcribe_run_params, keep_special_tags) - 40usize];
    ["Offset of field: transcribe_run_params::family"]
        [::std::mem::offset_of!(transcribe_run_params, family) - 48usize];
    ["Offset of field: transcribe_run_params::spec_k_drafts"]
        [::std::mem::offset_of!(transcribe_run_params, spec_k_drafts) - 56usize];
};
unsafe extern "C" {
    pub fn transcribe_run_params_init(params: *mut transcribe_run_params);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct transcribe_capabilities {
    pub struct_size: u64,
    pub native_sample_rate: i32,
    pub n_languages: ::std::os::raw::c_int,
    pub languages: *const *const ::std::os::raw::c_char,
    pub max_timestamp_kind: transcribe_timestamp_kind,
    pub supports_language_detect: bool,
    pub supports_translate: bool,
    pub supports_streaming: bool,
    pub supports_spec_decode: bool,
    pub max_audio_ms: i64,
    pub n_translate_target_languages: ::std::os::raw::c_int,
    pub translate_target_languages: *const *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of transcribe_capabilities"][::std::mem::size_of::<transcribe_capabilities>() - 56usize];
    ["Alignment of transcribe_capabilities"]
        [::std::mem::align_of::<transcribe_capabilities>() - 8usize];
    ["Offset of field: transcribe_capabilities::struct_size"]
        [::std::mem::offset_of!(transcribe_capabilities, struct_size) - 0usize];
    ["Offset of field: transcribe_capabilities::native_sample_rate"]
        [::std::mem::offset_of!(transcribe_capabilities, native_sample_rate) - 8usize];
    ["Offset of field: transcribe_capabilities::n_languages"]
        [::std::mem::offset_of!(transcribe_capabilities, n_languages) - 12usize];
    ["Offset of field: transcribe_capabilities::languages"]
        [::std::mem::offset_of!(transcribe_capabilities, languages) - 16usize];
    ["Offset of field: transcribe_capabilities::max_timestamp_kind"]
        [::std::mem::offset_of!(transcribe_capabilities, max_timestamp_kind) - 24usize];
    ["Offset of field: transcribe_capabilities::supports_language_detect"]
        [::std::mem::offset_of!(transcribe_capabilities, supports_language_detect) - 28usize];
    ["Offset of field: transcribe_capabilities::supports_translate"]
        [::std::mem::offset_of!(transcribe_capabilities, supports_translate) - 29usize];
    ["Offset of field: transcribe_capabilities::supports_streaming"]
        [::std::mem::offset_of!(transcribe_capabilities, supports_streaming) - 30usize];
    ["Offset of field: transcribe_capabilities::supports_spec_decode"]
        [::std::mem::offset_of!(transcribe_capabilities, supports_spec_decode) - 31usize];
    ["Offset of field: transcribe_capabilities::max_audio_ms"]
        [::std::mem::offset_of!(transcribe_capabilities, max_audio_ms) - 32usize];
    ["Offset of field: transcribe_capabilities::n_translate_target_languages"]
        [::std::mem::offset_of!(transcribe_capabilities, n_translate_target_languages) - 40usize];
    ["Offset of field: transcribe_capabilities::translate_target_languages"]
        [::std::mem::offset_of!(transcribe_capabilities, translate_target_languages) - 48usize];
};
unsafe extern "C" {
    pub fn transcribe_capabilities_init(out: *mut transcribe_capabilities);
}
unsafe extern "C" {
    pub fn transcribe_model_get_capabilities(
        model: *const transcribe_model,
        out_caps: *mut transcribe_capabilities,
    ) -> transcribe_status;
}
impl transcribe_feature {
    pub const TRANSCRIBE_FEATURE_INITIAL_PROMPT: transcribe_feature = transcribe_feature(0);
    pub const TRANSCRIBE_FEATURE_TEMPERATURE_FALLBACK: transcribe_feature = transcribe_feature(1);
    pub const TRANSCRIBE_FEATURE_LONG_FORM: transcribe_feature = transcribe_feature(2);
    pub const TRANSCRIBE_FEATURE_CANCELLATION: transcribe_feature = transcribe_feature(3);
    pub const TRANSCRIBE_FEATURE_PNC: transcribe_feature = transcribe_feature(4);
    pub const TRANSCRIBE_FEATURE_ITN: transcribe_feature = transcribe_feature(5);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct transcribe_feature(pub ::std::os::raw::c_uint);
unsafe extern "C" {
    pub fn transcribe_model_supports(
        model: *const transcribe_model,
        feature: transcribe_feature,
    ) -> bool;
}
unsafe extern "C" {
    pub fn transcribe_model_arch_string(
        model: *const transcribe_model,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_model_variant_string(
        model: *const transcribe_model,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_model_backend(
        model: *const transcribe_model,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_model_meta_val_str(
        model: *const transcribe_model,
        key: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn transcribe_model_load_file(
        path: *const ::std::os::raw::c_char,
        params: *const transcribe_model_load_params,
        out_model: *mut *mut transcribe_model,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_model_free(model: *mut transcribe_model);
}
unsafe extern "C" {
    pub fn transcribe_session_init(
        model: *mut transcribe_model,
        params: *const transcribe_session_params,
        out_session: *mut *mut transcribe_session,
    ) -> transcribe_status;
}
unsafe extern "C" {
    pub fn transcribe_session_free(session: *mut transcribe_session);
}
unsafe extern "C" {
    pub fn transcribe_open(
        path: *const ::std::os::raw::c_char,
        load_params: *const transcribe_model_load_params,
        session_params: *const transcribe_session_params,
        out_session: *mut *mut transcribe_session,
    ) -> transcribe_status;
}
